--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ During my tenure at SRVS National Higher Secondary School, I actively engaged in
       <br><br>
       <section id="education">
         <h2>Education</h2>
-                  <img src="C:\Users\s_asw\OneDrive\Desktop\English Blog\kindpng_1367928 (2).png" alt="Picture of school">
+                  <img src="https://www.kindpng.com/picc/m/136-1367928_download-education-icon-education-png-transparent-png.png" alt="Download Education Icon - Education Png, Transparent" alt="Picture of school">
         <ul>
           <br>
  In this section, I'll be sharing my educational journey with you. I attended SRVS National Higher Secondary School, where I pursued schooling. It was an enriching experience that taught me a lot about basic education and life. In 10th grade, I scored 491 out of 500, and I scored 577 out of 600 in 12th grade. After completing my higher secondary education, I have written some entrance exams, which include the NEET (National Eligibility cum Entrance Test), JEE Mains (Joint Entrance Examination), and JEE Advanced. I scored 92.37 percentile in JEE Mains and a decent score of 349 out of 720 in NEET. Currently, I'm pursuing my bachelor's degree in Electronics and Communication Engineering at SASTRA University.
